package domain

type Person struct {
	personId int64
	name     string
	email    string
}
